<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="24dp"
    >
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/update_hint"
        android:textColor="@color/color_text_3"
        android:textSize="24sp"
        />
    <TextView
        android:id="@+id/tv_upgrade_tips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="24dp"
        android:text="@string/new_version_is_detected"
        android:textColor="@color/color_text_3"

        />

    <TextView
        android:id="@+id/tv_upgrade"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/upgrade_now"
        android:textColor="@color/white"
        android:textSize="16sp"
        />

</LinearLayout>