<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingTop="24dp"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/download_tips"
        android:textColor="@color/color_text_3"
        android:textSize="24sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/download_progress"
        android:textColor="@color/color_text_3"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:max="100"
        android:progress="0"
        android:progressDrawable="@drawable/layer_progressbar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        />

    <TextView
        android:id="@+id/tv_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginStart="24dp"
        android:textColor="@color/color_text_3"
        tools:text="20%"
        />

    <TextView
        android:id="@+id/tv_install"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/install"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:visibility="gone"
        />

</LinearLayout>